# platipy

./: .buildinfo  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .pylintrc  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  Dockerfile-service  LICENCE.md  README.md  Vagrantfile  bootstrap.sh  cardiac.html  celery_dev.sh  cli.html  contributing.html  dev.Dockerfile  dicom.html  docker-compose.yml  dose.html  dvh.html  entrypoint.sh  examples.html  genindex.html  getting_started.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  pytest.ini  registration.html  requirements-backend.txt  requirements-dev.txt  requirements-dl.txt  requirements.txt  (+7 more)
.doctrees/: cardiac.doctree  cli.doctree  contributing.doctree  dicom.doctree  dose.doctree  dvh.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  registration.doctree  service.doctree  utils.doctree  visualiser.doctree
.doctrees/_examples/: atlas_segmentation.doctree  bronchus_segmentation.doctree  contour_comparison.doctree  dvh_analysis.doctree  left_ventricle_17_segments.doctree  visualise.doctree
.github/workflows/: build_docs.yml  docs_pull.yml  draft-pdf.yml  package.yml  pull_request.yml  release.yml
_examples/: atlas_segmentation.html  atlas_segmentation.ipynb  bronchus_segmentation.html  bronchus_segmentation.ipynb  contour_comparison.html  contour_comparison.ipynb  dvh_analysis.html  dvh_analysis.ipynb  left_ventricle_17_segments.html  left_ventricle_17_segments.ipynb  visualise.html  visualise.ipynb
_sources/: dicom.rst.txt  getting_started.rst.txt  index.rst.txt  registration.rst.txt
_sources/_examples/: visualise.ipynb.txt
_static/: custom.css
dicom/communication/: connector.py
dicom/nifti_to_rtstruct/: convert.py  convert_sample.ipynb  gen_contours.py
dicom/rtstruct_to_nifti/: convert.py  convert_sample.ipynb
dicom/tests/: test_convert_nifti.py  test_convert_rtstruct.py
docs/: cardiac.rst  conf.py  dicom.rst  dose.rst  dvh.rst  getting_started.rst  index.rst  registration.rst  service.rst  utils.rst
docs/_examples/: visualise.ipynb
docs/_static/: custom.css
docs/site/: .buildinfo  cli.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  registration.html  search.html  searchindex.js  visualiser.html
examples/: README.md  atlas_segmentation.ipynb  bronchus_segmentation.ipynb  bronchus_service.ipynb  cardiac_segmentation.ipynb  contour_comparison.ipynb  data_cleaning_preparation.ipynb  dvh_analysis.ipynb  generate_animations.ipynb  generate_synthetic_head_neck_deformation.ipynb  left_ventricle_17_segments.ipynb  rtstruct_to_nifti.ipynb  tcia.ipynb  visualise.ipynb
examples/animations/: generate_animations.ipynb
examples/cardiac_atlas_segmentation/: cardiac_segmentation.ipynb
examples/download/: tcia.ipynb
examples/experimental/: cardiac_service.ipynb  generate_left-ventricle_segments.ipynb  nnunet_service.ipynb  rtstruct_to_nifti.ipynb
examples/generate_synthetic_deformations/: README.md  generate_animations.ipynb  generate_synthetic_deformations.ipynb
examples/sample/: 1_convert_data.ipynb  3_registration.ipynb
examples/visualise/: visualise_segmentation.ipynb
framework/: __init__.py  api.py  app.py  application.py  client.py  manage.py  models.py  tasks.py  views.py
framework/imaging/: api.py  app.py  manage.py  models.py  tasks.py
framework/sample/: SampleClient.ipynb  sample.py
framework/templates/: dashboard.html  status.html
framework/tests/: test_framework.py  test_imaging_framework.py
jupyter/: Dockerfile  README
platipy/: __init__.py  client.py  utils.py
platipy/backend/: README.md  __init__.py  api.py  application.py  client.py  manage.py  models.py  tasks.py  views.py
platipy/cli/: dicom_crawler.py  nifti_to_rtstruct.py  nifti_to_series.py  rtstruct_to_nifti.py  run.py  segmentation.py  sort_dicom_from_directory.py  tcia_download.py
platipy/framework/: __init__.py  api.py  application.py  client.py  models.py  tasks.py  views.py
platipy/imaging/: __init__.py
platipy/jupyter/: Dockerfile  README  docker-compose.yml
platipy/radiomics/: pyradiomics.ipynb
platipy/visualisation/: VesselSurfaces-Auto.py  vis_tools.py
radiomics/: pyradiomics.ipynb
segmentation/atlas/: iterative_atlas_removal.py  label.py  registration.py  util.py
segmentation/cli/: run.py  (+1 more)
xnat/: Dockerfile  command.json  command2label.py  run_convert_rtstruct.py
(+262 files in other folders)
