[tool.poetry]
name = "platipy"
version = "0.0.0"
description = "Processing Library and Analysis Toolkit for Medical Imaging in Python"
authors = ["Phillip Chlap & Robert Finnegan"]
license = "Apache 2.0 License"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
]
readme = "README.md"

[tool.poetry.scripts]
platipy = "platipy.cli.run:platipy_cli"

[tool.poetry.dependencies]
python = "^3.8.0"
click = "^8.0.3"
SimpleITK = "^2.0.2"
pydicom = "^2.1.2"
scikit-image = ">=0.18.1"
pynetdicom = "^2.0.2"
requests = "^2.25.1"
rt-utils = "^1.1.4"
matplotlib = "^3.2.2"
pandas = "^1.3.0"

vtk = { version = "^9.1.0", optional = true }
nnunet = { version = "^1.7.0", optional = true }
Flask = { version = "^2.1.0", optional = true }
Flask-RESTful = { version = ">=0.3.8", optional = true }
Flask-SQLAlchemy = { version = "^2.4.4", optional = true }
celery = { version = "^5.2.3", optional = true }
redis = { version = "^3.5.3", optional = true }
psutil = { version = "^5.8.0", optional = true }
gunicorn = { version = "^20.0.4", optional = true }
Jinja2 = { version = "^3.1", optional = true }
pymedphys = { version = ">=0.38.0", optional = true }
 

[tool.poetry.extras]
cardiac = ["vtk", "nnunet"]
nnunet = ["nnunet"]
backend = [
    "Flask",
    "Flask-RESTful",
    "Flask-SQLAlchemy",
    "celery",
    "redis",
    "psutil",
    "gunicorn",
    "Jinja2",
    "pymedphys"
]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"
pylint = "^2.7.0"
pylint-flask-sqlalchemy = "^0.2.0"
black = "^22.3.0"
jupyterlab = "^3.0.17"
nbstripout = "^0.3.9"
watchdog = "^2.0.2"
argh = "^0.26.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.1.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-theme = "^1.0"
sphinx-click = "^4.3.0"
furo = "^2022.6.21"
nbsphinx = "^0.8.9"
m2r2 = "^0.3.3"
Jinja2 = "^3.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
